RESOLVED FIXED56160
WebKit2 UI process crashes if web process crashes while computing page rects for printing
https://bugs.webkit.org/show_bug.cgi?id=56160
Summary WebKit2 UI process crashes if web process crashes while computing page rects ...
Alexey Proskuryakov
Reported 2011-03-10 18:02:18 PST
Need to add null checks, sigh. <rdar://problem/9027410>
Attachments
proposed fix (4.49 KB, patch)
2011-03-10 18:11 PST, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2011-03-10 18:11:21 PST
Created attachment 85417 [details] proposed fix
WebKit Commit Bot
Comment 2 2011-03-10 23:55:01 PST
Comment on attachment 85417 [details] proposed fix Clearing flags on attachment: 85417 Committed r80825: <http://trac.webkit.org/changeset/80825>
WebKit Commit Bot
Comment 3 2011-03-10 23:55:05 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.